Fix: Bootstrap 4 styling integration. Fixed position buttons didn't have right z-index
Sync to source repo @7455191b024e543cdd2e65ddecd4d8f1949c1e33

--- a/css/buttons.jqueryui.css
+++ b/css/buttons.jqueryui.css
@@ -125,7 +125,7 @@ div.dt-button-collection.fixed {
   border-radius: 0;
 }
 div.dt-button-collection.fixed.two-column {
-  margin-left: -150px;
+  margin-left: -200px;
 }
 div.dt-button-collection.fixed.three-column {
   margin-left: -225px;
@@ -146,7 +146,7 @@ div.dt-button-collection > :last-child > * {
   break-inside: avoid;
 }
 div.dt-button-collection.two-column {
-  width: 300px;
+  width: 400px;
 }
 div.dt-button-collection.two-column > :last-child {
   padding-bottom: 1px;
